update popup and change date 10th to 3rd

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                 </div>
                                 <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 23px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                    (Available till 10th April)</h2>
+                                    (Available till 3rd April)</h2>
                                 </div>
                                 <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                     <section class="pricely-chart-two font-roboto-r">
@@ -681,7 +681,7 @@
                                                         <b>497</b>
                                                     </div>
                                                 </div>
-                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 10th April
+                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
                                                 </div>
                                             </div>
                                             <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -1084,7 +1084,7 @@
                                 </div>
                                 <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 23px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                    (Available till 10th April)</h2>
+                                    (Available till 3rd April)</h2>
                                 </div>
                                 <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                     <section class="pricely-chart-two font-roboto-r">
@@ -1099,7 +1099,7 @@
                                                         <b>497</b>
                                                     </div>
                                                 </div>
-                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 10th April
+                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
                                                 </div>
                                             </div>
                                             <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -1212,9 +1212,9 @@
             <div style="display:none;" id="dialog" class="window"> 
                 <div id="san">
                     <a href="#" class="close agree"><img src="images/close-icon.png" width="25" style="float:right; margin-right: -25px; margin-top: -20px;"></a>
-                    <div style="outline:none;padding:20px;" class="row" data-trigger="none" data-animate="fade" data-delay="900" data-title="1 column row">
-                        <div style="outline: none;" class="col-md-12" data-col="full" data-trigger="none" data-animate="fade" data-delay="900" data-title="full column">
-                            <div data-de-type="progressbar" data-de-editing="false" data-title="Progress Bar" data-ce="false" data-trigger="none" data-animate="fade" data-delay="900" style="margin-top: 0px; outline: none;cursor: pointer;" aria-disabled="false">
+                    <div style="outline:none;padding:20px;" class="row" data-trigger="none" data-animate="fade" data-delay="500" data-title="1 column row">
+                        <div style="outline: none;" class="col-md-12" data-col="full" data-trigger="none" data-animate="fade" data-delay="500" data-title="full column">
+                            <div data-de-type="progressbar" data-de-editing="false" data-title="Progress Bar" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none;cursor: pointer;" aria-disabled="false">
                                 <div class="progress small-progress-bar progressbar_nocorners" style="height:2rem !important;">
                                     <div class="progress-bar progress-bar-striped" role="progressbar" style="width:70% !important;">Almost Complete...</div>
                                 </div>
@@ -1227,7 +1227,7 @@
                             <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-72748" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px; outline: none; cursor: pointer; font-family:oswald-b;" aria-disabled="false">
                                 <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:26px; color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(The Early Bird Offer 75% OFF Discount Ends Soon)</b></div>
                             </div>
-                            <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="900" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-l;" aria-disabled="false">
+                            <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-l;" aria-disabled="false">
                                 <ul style="list-style:none;text-align:initial;font-size: 15px;padding-left: 10px;">
                                     <li>
                                         <img src="icons/check.svg" alt="" style="padding-right:15px;"> <b> BONUS: Complete recording of 2019 event</b>
@@ -1263,7 +1263,7 @@
                     </div>
                 </div>
             </div>
-            <div style="width: 2478px; font-size: 32pt; color:white; height: 1202px; display: none; opacity: 0.4;" id="mask"></div>
+            <div style="width:2478px;font-size:32pt;color:white;height:1202px;display:none;opacity:0.4;" id="mask"></div>
         </div>
     </div>
 
@@ -1893,7 +1893,7 @@
                             </div>
                             <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:30px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                (Available till 10th April)</h2>
+                                (Available till 3rd April)</h2>
                             </div>
                             <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                 <section class="pricely-chart-two font-roboto-r" style="font-size:30px;">
@@ -1908,7 +1908,7 @@
                                                     <b>497</b>
                                                 </div>
                                             </div>
-                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 10th April
+                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
                                             </div>
                                         </div>
                                         <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -2267,7 +2267,7 @@
                             </div>
                             <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:30px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                (Available till 10th April)</h2>
+                                (Available till 3rd April)</h2>
                             </div>
                             <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                 <section class="pricely-chart-two font-roboto-r" style="font-size:30px;">
@@ -2282,7 +2282,7 @@
                                                     <b>497</b>
                                                 </div>
                                             </div>
-                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 10th April
+                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
                                             </div>
                                         </div>
                                         <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -2398,7 +2398,7 @@
                         <div style="outline: none;" class="col-md-12" data-col="full" data-trigger="none" data-animate="fade" data-delay="500" data-title="full column">
                             <div data-de-type="progressbar" data-de-editing="false" data-title="Progress Bar" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 0px; outline: none;cursor: pointer;" aria-disabled="false">
                                 <div class="progress small-progress-bar progressbar_nocorners" style="height: 80px !important;">
-                                    <div class="progress-bar progress-bar-striped" role="progressbar">Almost Complete...</div>
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width:70% !important;font-size:40px;">Almost Complete...</div>
                                 </div>
                             </div>
                             <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_headline1-12432" data-de-type="headline" data-de-editing="false" data-title="headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 30px; outline: none; cursor: pointer; font-family:oswald-b;" aria-disabled="false">
@@ -2409,7 +2409,7 @@
                             <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-72748" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px; outline: none; cursor: pointer; font-family:oswald-b;" aria-disabled="false">
                                 <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center;font-size: 32px;color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(The Early Bird Offer 75% OFF Discount Ends Soon)</b></div>
                             </div>
-                            <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="900" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-r;" aria-disabled="false">
+                            <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-r;" aria-disabled="false">
                                 <ul style="list-style:none;text-align:initial;font-size: 32px;padding-left: 10px;">
                                     <li>
                                         <img src="icons/check.svg" alt="" width="47" style="padding-right:15px;"> <b> BONUS: Complete recording of 2019 event</b>
@@ -2445,7 +2445,7 @@
                     </div>
                 </div>
             </div>
-            <div style="width: 2478px; font-size: 32pt; color:white; height: 1202px; display: none; opacity: 0.4;" id="mask1"></div>
+            <div style="width:2478px;top:-105px !important;font-size:32pt;color:white;height:1202px;display:none;opacity:0.4;" id="mask1"></div>
         </div>
     </div>
 
