--- a/checkout.html
+++ b/checkout.html
@@ -154,8 +154,9 @@
                         <div class="col-md-6 font-roboto-m" style="background-color:#fff;padding-left:20px !important;float:left;">
                             <p style="font-size:24px;line-height:33px;padding:10px 0px;text-align:center;">Crypto-Nite 2020</p>
                             <ul style="font-size: 18px;padding: 0 0 0 25px;margin-bottom:0 !important;">
-                                <li><b>Date:</b> April 12, 2020, 11 a.m.</li>
-                                <li><b>End Date:</b> April 14, 2020, 6 p.m.</li>
+                                <li><b>Event Start Date:</b> April 12, 2020, 11 a.m.</li>
+                                <li><b>Event End Date:</b> April 14, 2020, 8 p.m.</li>
+                                <li><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                                 <li><b>Venue:</b> Online Event</li>
                                 <p style="font-size:25px;padding-top:5px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;497</span></p>
                             </ul>
@@ -293,8 +294,9 @@
                         <p style="font-size: 23px;text-align:center;">Crypto-Nite 2020</p>
                         <ul style="font-size: 16px;padding: 0px 30px;">
                             <li style="padding-top:10px;padding-bottom:5px;"><b>Date:</b> April 12, 2020, 11 a.m.</li>
-                            <li style="padding-bottom:5px;"><b>End Date:</b> April 14, 2020, 6 p.m.</li>
-                            <li style="padding-bottom: 5px;"><b>Venue:</b> Online Event</li>                           
+                            <li style="padding-bottom:5px;"><b>End Date:</b> April 14, 2020, 8 p.m.</li>
+                            <li style="padding-bottom:5px;"><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
+                            <li style="padding-bottom: 5px;"><b>Venue:</b> Online Event</li>                       
                             <p style="font-size: 25px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;497</span></p>
                         </ul>
                         <div style="padding: 0px 10px;">
