--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                 </div>
                                 <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 23px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                    (Available till 3rd April)</h2>
+                                    (Available till 6th April)</h2>
                                 </div>
                                 <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                     <section class="pricely-chart-two font-roboto-r">
@@ -681,7 +681,7 @@
                                                         <b>497</b>
                                                     </div>
                                                 </div>
-                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
+                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 6th April
                                                 </div>
                                             </div>
                                             <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -698,7 +698,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="3rd column" style="outline: none;">
+                        <div class="col-md-4 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="6th column" style="outline: none;">
                             <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
                                 <div class="de elHeadlineWrapper ui-droppable de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none; cursor: pointer; " aria-disabled="false">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 26px; color: rgb(140, 225, 207);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>
@@ -1084,7 +1084,7 @@
                                 </div>
                                 <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 23px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                    (Available till 3rd April)</h2>
+                                    (Available till 6th April)</h2>
                                 </div>
                                 <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                     <section class="pricely-chart-two font-roboto-r">
@@ -1099,7 +1099,7 @@
                                                         <b>497</b>
                                                     </div>
                                                 </div>
-                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
+                                                <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 6th April
                                                 </div>
                                             </div>
                                             <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -1116,7 +1116,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="3rd column" style="outline: none;">
+                        <div class="col-md-4 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="6th column" style="outline: none;">
                             <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
                                 <div class="de elHeadlineWrapper ui-droppable de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none; cursor: pointer; " aria-disabled="false">
                                     <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size: 26px; color: rgb(140, 225, 207);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>
@@ -1230,7 +1230,7 @@
                             <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-l;" aria-disabled="false">
                                 <ul style="list-style:none;text-align:initial;font-size: 15px;padding-left: 10px;">
                                     <li>
-                                        <img src="icons/check.svg" alt="" style="padding-right:15px;"> <b> BONUS: Complete recording of 2019 event</b>
+                                        <img src="icons/check.svg" alt="" style="padding-right:15px;"> <b> BONUS: Complete recording of 2020 event</b>
                                     </li>
                                     <li>
                                         <img src="icons/check.svg" alt="" style="padding-right:15px;"> <b> All the videos, tutorials, blueprints shared by the Speakers</b>
@@ -1303,7 +1303,10 @@
                         <hr style="width: 50px;height: 4px;background-color: white;margin-top: 15px;margin-bottom: 0px;border-radius: 100px;">
                         <hr style="width: 50px;height: 4px;background-color: white;margin-top: 15px;margin-bottom: 0px;border-radius: 100px;">
                     </div>
-                    <div class="d-flex position-fixed align-items-center w-100" style="z-index: 10; margin-top:-45px; margin-left:32px;">
+                    <div style="position: fixed; z-index: 10; left:70px; margin-top:-38px; z-index:15 !important;">
+                        <img src="images/WhatsApp_Logo_6.png" style="width: 90px;" onclick="window.open('https://wa.me/918146550542/?text=Hello%20Finstreet%2C%0AI%20have%20a%20query%20regarding%20your%20event.%20It%20will%20be%20great%20if%20you%20can%20help%20me%20out.','_blank')">
+                    </div>
+                    <div class="d-flex position-fixed align-items-center w-100 justify-content-center" style="z-index: 10; margin-top:-45px;">
                         <a class="navbar-brand header-text" id="mobile-header-logo-text" href="/">
                             <img class="logo-header" src="images/logo.png" alt="" style="width:250px;">
                         </a>
@@ -1893,7 +1896,7 @@
                             </div>
                             <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:30px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                (Available till 3rd April)</h2>
+                                (Available till 6th April)</h2>
                             </div>
                             <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                 <section class="pricely-chart-two font-roboto-r" style="font-size:30px;">
@@ -1908,7 +1911,7 @@
                                                     <b>497</b>
                                                 </div>
                                             </div>
-                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
+                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 6th April
                                             </div>
                                         </div>
                                         <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -1925,7 +1928,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="3rd column" style="outline: none;">
+                    <div class="col-md-12 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="6th column" style="outline: none;">
                         <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
                             <div class="de elHeadlineWrapper ui-droppable de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none; cursor: pointer; " aria-disabled="false">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:50px; color: rgb(140, 225, 207);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>
@@ -2267,7 +2270,7 @@
                             </div>
                             <div class="de elHeadlineWrapper de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none;  cursor: pointer;">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:30px; color: rgb(255, 244, 155);" data-bold="inherit" data-gramm="false" contenteditable="false">
-                                (Available till 3rd April)</h2>
+                                (Available till 6th April)</h2>
                             </div>
                             <div class="de elPricingWrapper elMargin0 ui-droppable de-editable" data-de-type="pricing" data-de-editing="false" data-title="pricing table" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top: 15px; outline: none; cursor: pointer;" aria-disabled="false">
                                 <section class="pricely-chart-two font-roboto-r" style="font-size:30px;">
@@ -2282,7 +2285,7 @@
                                                     <b>497</b>
                                                 </div>
                                             </div>
-                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 3rd April
+                                            <div class="pricely-foreword ne" data-gramm="false" contenteditable="false">Available till 6th April
                                             </div>
                                         </div>
                                         <ul class="list-group ne" data-gramm="false" contenteditable="false">
@@ -2299,7 +2302,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="3rd column" style="outline: none;">
+                    <div class="col-md-12 innerContent col_right ui-resizable" data-col="right" data-trigger="none" data-animate="fade" data-delay="500" data-title="6th column" style="outline: none;">
                         <div class="col-inner bgCover  noBorder borderSolid border3px cornersAll radius0 shadow0 P0-top P0-bottom P0H noTopMargin" style="padding: 0 10px">
                             <div class="de elHeadlineWrapper ui-droppable de-editable font-Oswald-b" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 0px; outline: none; cursor: pointer; " aria-disabled="false">
                                 <h2 class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:50px; color: rgb(140, 225, 207);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>
@@ -2412,7 +2415,7 @@
                             <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-r;" aria-disabled="false">
                                 <ul style="list-style:none;text-align:initial;font-size: 32px;padding-left: 10px;">
                                     <li>
-                                        <img src="icons/check.svg" alt="" width="47" style="padding-right:15px;"> <b> BONUS: Complete recording of 2019 event</b>
+                                        <img src="icons/check.svg" alt="" width="47" style="padding-right:15px;"> <b> BONUS: Complete recording of 2020 event</b>
                                     </li>
                                     <li>
                                         <img src="icons/check.svg" alt="" width="47" style="padding-right:15px;"> <b> All the videos, tutorials, blueprints shared by the Speakers</b>
