--- a/affiliate-dashboard.html
+++ b/affiliate-dashboard.html
@@ -28,6 +28,25 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/cropped-Fin-270x270.jpg">
     <script src="https://use.fontawesome.com/ebc80d226d.js"></script>
+
+
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2925272084236286');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=2925272084236286&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Facebook Pixel Code -->
     
     
 </head>
