commented code sidenav

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="d-none d-lg-block">
 
         <!-- sidenav -->
-        <div id="st-2" class=" st-sticky-share-buttons st-left st-toggleable st-has-labels st-show-total ">
+        <!-- <div id="st-2" class=" st-sticky-share-buttons st-left st-toggleable st-has-labels st-show-total ">
             <div class="st-total ">
                 <span class="st-label">30.6k</span>
                 <span class="st-shares">Shares</span>
@@ -62,7 +62,7 @@
                 <img alt="messenger sharing button" src="https://platform-cdn.sharethis.com/img/messenger.svg">
                 <span class="st-label">158</span>
             </div>
-            <div class="st-btn st-last" onclick="window.open('https://web.whatsapp.com//918968232722/?text=Hello%20Finstreet%2C%0AI%20have%20a%20query%20regarding%20your%20event.%20It%20will%20be%20great%20if%20you%20can%20help%20me%20out.','_blank')" data-network="whatsapp" style="display: inline-block;">
+            <div class="st-btn st-last" data-action="share/whatsapp/share" onclick="window.location = 'https://web.whatsapp.com/send?text=www.google.com'" data-network="whatsapp" style="display: inline-block;">
                 <img alt="whatsapp sharing button" src="https://platform-cdn.sharethis.com/img/whatsapp.svg">
                 <span class="st-label">975</span>
             </div>
@@ -74,7 +74,7 @@
                     <img alt="arrow_right sharing button" src="https://platform-cdn.sharethis.com/img/arrow_right.svg">
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Navigation -->
         <div class="fixed-top" style="padding:20px 0px;background-color:#00abc9;outline:none;">
@@ -1301,7 +1301,7 @@
     <!-- mobile view -->
     <div class="d-lg-none position-relative">
         <!-- sidenav mobile -->
-        <div id="st-2" class=" st-sticky-share-buttons st-left st-toggleable st-has-labels st-show-total" style="top:550px;">
+        <!-- <div id="st-2" class=" st-sticky-share-buttons st-left st-toggleable st-has-labels st-show-total" style="top:550px;">
             <div class="st-total" style="height:90px;width:90px;font-size:28px;line-height:30px;">
                 <span class="st-label">30.6k</span>
                 <span class="st-shares">Shares</span>
@@ -1334,7 +1334,7 @@
                     <img alt="arrow_right sharing button" src="https://platform-cdn.sharethis.com/img/arrow_right.svg" style="height:50px;width:50px;">
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!--  -->
         <div class="position-fixed p-5 d-flex justify-content-center align-items-center " style="bottom: 0px; width: 100%; background-color: black; z-index: 100;">
