--- a/checkout.html
+++ b/checkout.html
@@ -165,15 +165,15 @@
         <div class="container-fluid" style="margin-top:93px;height:345px;display:flex;">
             <div class="container" style="padding:30px 0px">
                 <div class="col-md-12" style="border-radius:10px;">
-                    <div style="background-color:#fff;padding:20px;float:left;border-radius:10px;height:300px;" class="col-md-8">
+                    <div style="background-color:#fff;padding:20px;float:left;border-radius:10px;height:320px;" class="col-md-8">
                         <div class="col-md-6" style="background-color:#fff;padding: 10px;float:left;justify-content:center;display:flex;">
                             <img src="images/image.png" alt="" style="border-radius:10px;">
                         </div>
                         <div class="col-md-6 font-roboto-m" style="background-color:#fff;padding-left:20px !important;float:left;">
                             <p style="font-size:24px;line-height:33px;padding:10px 0px;text-align:center;">Crypto-Nite 2020</p>
                             <ul style="font-size: 18px;padding: 0 0 0 25px;margin-bottom:0 !important;">
-                                <li><b>Event Start Date:</b> April 12, 2020, 11 a.m.</li>
-                                <li><b>Event End Date:</b> April 14, 2020, 8 p.m.</li>
+                                <li><b>Start Date:</b> April 12, 2020, 11 a.m.</li>
+                                <li><b>End Date:</b> April 14, 2020, 8 p.m.</li>
                                 <li><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                                 <li><b>Venue:</b> Online Event</li>
                                 <p style="font-size:25px;padding-top:5px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;497</span></p>
@@ -196,7 +196,7 @@
             </div>
         </div>
         <!-- Content 1 -->
-        <div class="container-fluid" style="padding-bottom:15px;">
+        <div class="container-fluid" style="padding-bottom:15px; margin-top: 30px;">
             <div class="container" style="padding:0px;">
                 <div class="col-md-10" style="border-radius:10px;">
                     <div style="width:890px;">
@@ -303,7 +303,7 @@
 
         <!-- Page Content -->
         <div class="container-fluid" style="width:100%;padding:15px;">
-            <div class="container-fluid" style="margin-top: 115px;padding: 0px 0px;background-color:#fff;height: 525px;border-radius:10px;">
+            <div class="container-fluid" style="margin-top: 115px;padding: 0px 0px;background-color:#fff;height: 575px;border-radius:10px;">
                 <div>
                     <div class="col-md-12" style="padding: 20px;float:left;">
                         <img src="images/image.png" alt="" width="100%" style="border-radius:10px;">
